[gd_scene load_steps=48 format=2]

[ext_resource path="res://images/pipes/curved_3_cap_4.png" type="Texture" id=1]
[ext_resource path="res://images/connector.png" type="Texture" id=2]
[ext_resource path="res://images/pipes/straight_cap_1.png" type="Texture" id=3]
[ext_resource path="res://images/pipes/end_top_cap_4.png" type="Texture" id=4]
[ext_resource path="res://images/pipes/end_bottom_cap_4.png" type="Texture" id=5]
[ext_resource path="res://images/happy_icon.png" type="Texture" id=6]
[ext_resource path="res://images/watersource.png" type="Texture" id=7]
[ext_resource path="res://images/pipes/end_left_cap_2.png" type="Texture" id=8]
[ext_resource path="res://images/pipes/end_left_cap_1.png" type="Texture" id=9]
[ext_resource path="res://images/pipes/curved_1_cap_2.png" type="Texture" id=10]
[ext_resource path="res://images/pipes/end_right_cap_2.png" type="Texture" id=11]
[ext_resource path="res://images/pipes/upright_cap_2.png" type="Texture" id=12]
[ext_resource path="res://images/showerhead.png" type="Texture" id=13]
[ext_resource path="res://images/pipes/curved_2_cap_4.png" type="Texture" id=14]
[ext_resource path="res://images/sad_icon.png" type="Texture" id=15]
[ext_resource path="res://images/pipes/straight_cap_2.png" type="Texture" id=16]
[ext_resource path="res://images/pipes/end_left_cap_4.png" type="Texture" id=17]
[ext_resource path="res://levels/Level_4.gd" type="Script" id=18]
[ext_resource path="res://images/pipes/end_right_cap_1.png" type="Texture" id=19]
[ext_resource path="res://resources/Type Machine.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://images/water_animation/full_2/full_cap_2.tres" type="Texture" id=21]
[ext_resource path="res://images/water_animation/shower_low/shower_low.tres" type="Texture" id=22]
[ext_resource path="res://images/water_animation/shower_high/shower_high.tres" type="Texture" id=23]
[ext_resource path="res://images/water_animation/cap_1/cap_1.tres" type="Texture" id=24]
[ext_resource path="res://images/pipes/upright_cap_4.png" type="Texture" id=25]
[ext_resource path="res://images/pipes/curved_1_cap_4.png" type="Texture" id=26]
[ext_resource path="res://images/pipes/straight_cap_4.png" type="Texture" id=27]
[ext_resource path="res://images/pipes/end_right_cap_4.png" type="Texture" id=28]
[ext_resource path="res://images/water_animation/cap_2/cap_2.tres" type="Texture" id=29]
[ext_resource path="res://images/pipes/end_bottom_cap_2.png" type="Texture" id=30]
[ext_resource path="res://images/soap_animation/soap_full/soap_full.tres" type="Texture" id=32]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 20 )

[sub_resource type="TileSet" id=13]
0/name = "full_cap_2.tres 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=14]
0/name = "cap_2.tres 0"
0/texture = ExtResource( 29 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=15]
0/name = "cap_1.tres 0"
0/texture = ExtResource( 24 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=16]
0/name = "full_cap_2.tres 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "cap_2.tres 1"
1/texture = ExtResource( 29 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 20 )

[sub_resource type="TileSet" id=1]
0/name = "end_top_cap_4.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "curved_1_cap_4.png 1"
1/texture = ExtResource( 26 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 192 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "end_right_cap_4.png 2"
2/texture = ExtResource( 28 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "upright_cap_4.png 3"
3/texture = ExtResource( 25 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 192, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "straight_cap_4.png 4"
4/texture = ExtResource( 27 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "end_bottom_cap_4.png 5"
5/texture = ExtResource( 5 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 192, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "curved_3_cap_4.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 192, 192 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "end_left_cap_4.png 7"
7/texture = ExtResource( 17 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 192 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "curved_2_cap_4.png 8"
8/texture = ExtResource( 14 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 192, 192 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=2]
3/name = "end_left_cap_2.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "straight_cap_2.png 4"
4/texture = ExtResource( 16 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 192 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "end_right_cap_2.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 192 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "end_left_cap_1.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "straight_cap_1.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "end_right_cap_1.png 2"
2/texture = ExtResource( 19 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "end_bottom_cap_2.png 0"
0/texture = ExtResource( 30 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "upright_cap_2.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 192, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "curved_1_cap_2.png 2"
2/texture = ExtResource( 10 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 192, 192 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "straight_cap_2.png 3"
3/texture = ExtResource( 16 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 192 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 20 )

[node name="Level_4" type="Node"]
script = ExtResource( 18 )

[node name="Watersource" type="Sprite" parent="."]
position = Vector2( 296, 472 )
texture = ExtResource( 7 )

[node name="Message" type="Label" parent="."]
margin_left = 184.0
margin_top = 208.0
margin_right = 872.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 5 )
text = "Red pipes send 4 units of water."
align = 1
autowrap = true

[node name="Return" type="Button" parent="."]
visible = false
margin_left = 896.0
margin_top = 944.0
margin_right = 1152.0
margin_bottom = 1024.0
custom_fonts/font = SubResource( 4 )
disabled = true
text = "RETURN TO HOME"

[node name="Water" type="Node" parent="."]

[node name="1" type="TileMap" parent="Water"]
position = Vector2( 72, -72 )
tile_set = SubResource( 13 )
format = 1

[node name="2" type="TileMap" parent="Water"]
position = Vector2( 72, -72 )
tile_set = SubResource( 14 )
format = 1

[node name="3" type="TileMap" parent="Water"]
position = Vector2( 120, -88 )
tile_set = SubResource( 15 )
format = 1

[node name="4" type="TileMap" parent="Water"]
position = Vector2( 72, -72 )
tile_set = SubResource( 16 )
format = 1

[node name="Shower" type="Sprite" parent="."]
position = Vector2( 552, -384 )
texture = ExtResource( 13 )
offset = Vector2( 1080, 800 )

[node name="S_Control" type="Control" parent="Shower"]
margin_left = 1040.0
margin_top = 768.0
margin_right = 1152.0
margin_bottom = 912.0

[node name="High" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1104, 872 )
z_index = 2
texture = ExtResource( 23 )

[node name="Low" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1104, 872 )
z_index = 2
texture = ExtResource( 22 )

[node name="Soap" type="Sprite" parent="Shower"]
position = Vector2( 1120, 872 )
z_index = 1
texture = ExtResource( 32 )

[node name="Happy" type="Sprite" parent="Shower"]
visible = false
position = Vector2( 1120, 880 )
texture = ExtResource( 6 )

[node name="Sad" type="Sprite" parent="Shower"]
position = Vector2( 1120, 880 )
texture = ExtResource( 15 )

[node name="Score" type="Label" parent="."]
margin_left = 1616.0
margin_top = 544.0
margin_right = 1728.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 12 )
align = 1

[node name="Pipes" type="Node" parent="."]

[node name="P1" type="TileMap" parent="Pipes"]
position = Vector2( 72, -72 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 655362, 1073741829, 0, 655383, 1073741829, 0, 720898, 1073741827, 0, 720919, 1073741827, 0, 786434, 1073741825, 0, 786437, 1073741828, 0, 786438, 1073741828, 0, 786439, 1073741828, 0, 786440, 1073741828, 0, 786441, 1073741828, 0, 786442, 1073741828, 0, 786443, 1073741828, 0, 786444, 1073741828, 0, 786445, 1073741828, 0, 786446, 1073741828, 0, 786447, 1073741828, 0, 786448, 1073741828, 0, 786449, 1073741828, 0, 786450, 1073741828, 0, 786451, 1073741828, 0, 786452, 1073741828, 0, 786453, 1073741828, 0, 786454, 1073741828, 0, 786455, 1073741832, 0 )

[node name="P2" type="TileMap" parent="Pipes"]
position = Vector2( 72, -72 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 458757, 3, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 5, 0 )

[node name="P3" type="TileMap" parent="Pipes"]
position = Vector2( 56, -48 )
tile_set = SubResource( 6 )
format = 1
tile_data = PoolIntArray( 458768, 0, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 2, 0 )

[node name="P4" type="TileMap" parent="Pipes"]
position = Vector2( 72, -72 )
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 196621, 2, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 536870914, 0, 393229, 0, 0, 393239, 0, 0 )

[node name="P1_Control" type="Control" parent="Pipes"]
margin_left = 224.0
margin_top = 592.0
margin_right = 368.0
margin_bottom = 848.0

[node name="1a" type="Control" parent="Pipes/P1_Control"]
margin_left = 1344.0
margin_right = 1488.0
margin_bottom = 256.0

[node name="1b" type="Control" parent="Pipes/P1_Control"]
margin_left = 144.0
margin_top = 144.0
margin_right = 1344.0
margin_bottom = 256.0

[node name="P2_Control" type="Control" parent="Pipes"]
margin_left = 416.0
margin_top = 400.0
margin_right = 880.0
margin_bottom = 544.0

[node name="P3_Control" type="Control" parent="Pipes"]
margin_left = 1120.0
margin_top = 408.0
margin_right = 1552.0
margin_bottom = 528.0

[node name="P4_Control" type="Control" parent="Pipes"]
margin_left = 928.0
margin_top = 160.0
margin_right = 1712.0
margin_bottom = 272.0

[node name="4a" type="Control" parent="Pipes/P4_Control"]
margin_top = 112.0
margin_right = 144.0
margin_bottom = 192.0

[node name="4b" type="Control" parent="Pipes/P4_Control"]
margin_left = 640.0
margin_top = 120.0
margin_right = 784.0
margin_bottom = 192.0

[node name="Cost" type="Node" parent="."]

[node name="1_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1112.0
margin_top = 864.0
margin_right = 1111.36
margin_bottom = 869.24
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="1_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 912.0
margin_top = 864.0
margin_right = 911.36
margin_bottom = 869.24
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="1_cost" type="Label" parent="Cost"]
margin_left = 912.0
margin_top = 864.0
margin_right = 1144.0
margin_bottom = 920.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="2_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 736.0
margin_top = 544.0
margin_right = 735.36
margin_bottom = 549.24
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="2_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 536.0
margin_top = 544.0
margin_right = 535.36
margin_bottom = 549.24
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="2_cost" type="Label" parent="Cost"]
margin_left = 536.0
margin_top = 544.0
margin_right = 768.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="3_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1432.0
margin_top = 520.0
margin_right = 1431.36
margin_bottom = 525.24
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="3_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1232.0
margin_top = 520.0
margin_right = 1231.36
margin_bottom = 525.24
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="3_cost" type="Label" parent="Cost"]
margin_left = 1232.0
margin_top = 520.0
margin_right = 1464.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="4_plus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1432.0
margin_top = 288.0
margin_right = 1431.36
margin_bottom = 293.24
custom_fonts/font = SubResource( 7 )
text = "+"

[node name="4_minus" type="Button" parent="Cost"]
anchor_right = 0.017
anchor_bottom = 0.022
margin_left = 1232.0
margin_top = 288.0
margin_right = 1231.36
margin_bottom = 293.24
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="4_cost" type="Label" parent="Cost"]
margin_left = 1232.0
margin_top = 288.0
margin_right = 1464.0
margin_bottom = 344.0
custom_fonts/font = SubResource( 8 )
align = 1

[node name="Connector" type="Sprite" parent="."]
position = Vector2( 1000, 472 )
texture = ExtResource( 2 )

[node name="C_Control" type="Control" parent="Connector"]
margin_left = -88.0
margin_top = -48.0
margin_right = 88.0
margin_bottom = 56.0

[node name="Tooltips" type="CanvasLayer" parent="."]

[node name="S_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1144.0
margin_top = 920.0
margin_right = 1284.0
margin_bottom = 1112.0

[node name="Label" type="Label" parent="Tooltips/S_Panel"]
margin_left = 12.0
margin_top = 16.0
margin_right = 124.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 9 )
autowrap = true

[node name="P1_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1152.0
margin_top = 768.0
margin_right = 1336.0
margin_bottom = 904.0

[node name="Label" type="Label" parent="Tooltips/P1_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 10 )
autowrap = true

[node name="P2_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 640.0
margin_top = 517.0
margin_right = 824.0
margin_bottom = 653.0

[node name="Label" type="Label" parent="Tooltips/P2_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 10 )
autowrap = true

[node name="P3_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1536.0
margin_top = 544.0
margin_right = 1720.0
margin_bottom = 680.0

[node name="Label" type="Label" parent="Tooltips/P3_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 10 )
autowrap = true

[node name="P4_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1536.0
margin_top = 261.0
margin_right = 1720.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="Tooltips/P4_Panel"]
margin_left = 16.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 10 )
autowrap = true

[node name="C_Panel" type="Panel" parent="Tooltips"]
visible = false
margin_left = 1024.0
margin_top = 480.0
margin_right = 1264.0
margin_bottom = 704.0

[node name="Label" type="Label" parent="Tooltips/C_Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 11 )
text = "Connector

Splits pipe path. If sending to multiple destinations, it will split water units down each path."
autowrap = true

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="mouse_entered" from="Shower/S_Control" to="." method="_on_S_Control_mouse_entered"]
[connection signal="mouse_exited" from="Shower/S_Control" to="." method="_on_S_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P1_Control" to="." method="_on_P1_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P1_Control" to="." method="_on_P1_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P1_Control/1a" to="." method="_on_P1_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P1_Control/1a" to="." method="_on_P1_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P1_Control/1b" to="." method="_on_P1_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P1_Control/1b" to="." method="_on_P1_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P2_Control" to="." method="_on_P2_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P2_Control" to="." method="_on_P2_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P3_Control" to="." method="_on_P3_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P3_Control" to="." method="_on_P3_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P4_Control" to="." method="_on_P4_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P4_Control" to="." method="_on_P4_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P4_Control/4a" to="." method="_on_P4_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P4_Control/4a" to="." method="_on_P4_Control_mouse_exited"]
[connection signal="mouse_entered" from="Pipes/P4_Control/4b" to="." method="_on_P4_Control_mouse_entered"]
[connection signal="mouse_exited" from="Pipes/P4_Control/4b" to="." method="_on_P4_Control_mouse_exited"]
[connection signal="pressed" from="Cost/1_plus" to="." method="_on_1_plus_pressed"]
[connection signal="pressed" from="Cost/1_minus" to="." method="_on_1_minus_pressed"]
[connection signal="pressed" from="Cost/2_plus" to="." method="_on_2_plus_pressed"]
[connection signal="pressed" from="Cost/2_minus" to="." method="_on_2_minus_pressed"]
[connection signal="pressed" from="Cost/3_plus" to="." method="_on_3_plus_pressed"]
[connection signal="pressed" from="Cost/3_minus" to="." method="_on_3_minus_pressed"]
[connection signal="pressed" from="Cost/4_plus" to="." method="_on_4_plus_pressed"]
[connection signal="pressed" from="Cost/4_minus" to="." method="_on_4_minus_pressed"]
[connection signal="mouse_entered" from="Connector/C_Control" to="." method="_on_C_Control_mouse_entered"]
[connection signal="mouse_exited" from="Connector/C_Control" to="." method="_on_C_Control_mouse_exited"]
